# orca

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  ReSharper.DotSettings  annotated.html  files.html  index.html  modules.html  namespaces.html  pages.html  rustfmt.toml
crates/orca_libadwaita/: Cargo.toml  build.rs
crates/orca_libadwaita/resource/: orca.gresource.xml  window.ui
crates/orca_libadwaita/src/: application.rs  config.rs  lib.rs  window.rs
share/: CMakeLists.txt
share/applications/: org.orca-project.orca.desktop
share/metainfo/: org.qt-project.qtcreator.appdata.xml.cmakein
share/orca/: CMakeLists.txt
share/orca/themes/: dark.theme  light.theme
share/orca/translations/: CMakeLists.txt  README.md  check-ts.pl  extract-customwizards.py  extract-externaltools.py  extract-jsonwizards.py  extract-snippets.py
src/: CMakeLists.txt  main.rs
src/app/: CMakeLists.txt  app-Info.plist  app_version.h.cmakein  app_version.h.in  app_version.hpp.cmakein  app_version.hpp.in  main.cpp  main_mac.mm  orca.rc
src/libs/: CMakeLists.txt
src/libs/aggregation/: CMakeLists.txt  aggregate.cpp  aggregate.h  aggregate.hpp  aggregation_global.h
src/libs/clangsupport/: CMakeLists.txt  clangcodemodelconnectionclient.cpp  clangsupport_global.h  connectionclient.cpp  processcreator.cpp  processcreator.h  processexception.h  processhandle.h  sourcelocationscontainer.h
src/libs/cplusplus/: BackwardsScanner.cpp  CMakeLists.txt  CppDocument.h  DependencyTable.h  FindUsages.cpp  FindUsages.h  Icons.h  LookupContext.cpp  LookupItem.h  MatchingText.cpp  pp-engine.cpp
src/libs/extensionsystem/: CMakeLists.txt  extensionsystem_global.h  invoker.cpp  invoker.h  invoker.hpp  iplugin.cpp  iplugin.h  iplugin.hpp  iplugin_p.h  iplugin_p.hpp  optionsparser.cpp  optionsparser.hpp  plugindetailsview.cpp  plugindetailsview.h  plugindetailsview.hpp  pluginerroroverview.cpp  pluginerroroverview.h  pluginerroroverview.hpp  pluginerrorview.cpp  pluginerrorview.h  pluginerrorview.hpp  pluginmanager.cpp  pluginmanager.h  pluginmanager.hpp  pluginmanager_p.h  pluginmanager_p.hpp  pluginspec.cpp  pluginspec.h  pluginspec.hpp  pluginspec_p.h  pluginspec_p.hpp  pluginview.cpp  pluginview.h  pluginview.hpp
src/libs/languageserverprotocol/: basemessage.cpp  basemessage.h  icontent.h  jsonrpcmessages.cpp  jsonrpcmessages.h  lsptypes.cpp  lsptypes.h  lsputils.cpp  lsputils.h  progresssupport.cpp  progresssupport.h
src/libs/languageutils/: CMakeLists.txt
src/libs/qmljs/: CMakeLists.txt  jsoncheck.cpp  jsoncheck.h  qmljsbind.cpp  qmljsbundle.cpp  qmljscheck.cpp  qmljscodeformatter.cpp  qmljscompletioncontextfinder.cpp  qmljscontext.cpp  qmljsdialect.h  qmljsdocument.cpp  qmljsevaluate.cpp  qmljsfindexportedcpptypes.cpp  qmljsimportdependencies.cpp  qmljsimportdependencies.h  qmljsindenter.cpp  qmljsinterpreter.cpp  qmljsinterpreter.h  qmljslineinfo.cpp  qmljslink.cpp  qmljsmodelmanagerinterface.cpp  qmljsmodelmanagerinterface.h  qmljsplugindumper.cpp  qmljsplugindumper.h  qmljsrewriter.h  qmljsscopebuilder.cpp  qmljsstaticanalysismessage.cpp  qmljstypedescriptionreader.cpp  qmljsutils.cpp
src/libs/ssh/: CMakeLists.txt  sftpfilesystemmodel.cpp  sftpsession.cpp  sftptransfer.cpp  sshconnection.cpp  sshconnection.h  sshconnectionmanager.cpp  sshconnectionmanager.h  sshkeycreationdialog.cpp  sshkeycreationdialog.h  sshprocess.cpp  sshprocess.h  sshremoteprocess.cpp  sshremoteprocessrunner.cpp  sshsettings.cpp  sshsettings.h
src/libs/utils/: CMakeLists.txt  QtConcurrentTools  algorithm.h  algorithm.hpp  ansiescapecodehandler.cpp  ansiescapecodehandler.h  ansiescapecodehandler.hpp  appmainwindow.cpp  appmainwindow.h  appmainwindow.hpp  archive.cpp  archive.h  archive.hpp  aspects.cpp  aspects.h  aspects.hpp  basetreeview.cpp  basetreeview.h  basetreeview.hpp  benchmarker.cpp  benchmarker.h  benchmarker.hpp  buildablehelperlibrary.cpp  buildablehelperlibrary.h  buildablehelperlibrary.hpp  camelcasecursor.cpp  camelcasecursor.h  camelcasecursor.hpp  categorysortfiltermodel.cpp  categorysortfiltermodel.h  categorysortfiltermodel.hpp  changeset.cpp  changeset.h  changeset.hpp  checkablemessagebox.cpp  checkablemessagebox.h  checkablemessagebox.hpp  classnamevalidatinglineedit.cpp  classnamevalidatinglineedit.h  classnamevalidatinglineedit.hpp  (+402 more)
src/plugins/: CMakeLists.txt
src/plugins/analysis/: CMakeLists.txt  analysis-plugin.cpp  analysis-plugin.hpp  analysis.json.in  analysis.qrc
src/plugins/classview/: CMakeLists.txt  ClassView.json.in  classview.json.in  classviewconstants.hpp  classviewmanager.cpp  classviewmanager.hpp  classviewnavigationwidget.cpp  classviewnavigationwidget.hpp  classviewnavigationwidgetfactory.cpp  classviewnavigationwidgetfactory.hpp  classviewparser.cpp  classviewparser.hpp  classviewparsertreeitem.cpp  classviewparsertreeitem.hpp  classviewplugin.cpp  classviewplugin.hpp  classviewsymbolinformation.cpp  classviewsymbolinformation.hpp  classviewsymbollocation.cpp  classviewsymbollocation.hpp  classviewtreeitemmodel.cpp  classviewtreeitemmodel.hpp  classviewutils.cpp  classviewutils.hpp
src/plugins/cmakeprojectmanager/: CMakeLists.txt  CMakeProjectManager.json.in  builddirparameters.cpp  builddirparameters.hpp  cmake_global.hpp  cmakeautocompleter.cpp  cmakeautocompleter.hpp  cmakebuildconfiguration.cpp  cmakebuildconfiguration.hpp  cmakebuildstep.cpp  cmakebuildstep.hpp  cmakebuildsystem.cpp  cmakebuildsystem.hpp  cmakebuildtarget.hpp  cmakeconfigitem.cpp  cmakeconfigitem.hpp  cmakeeditor.cpp  cmakeeditor.hpp  cmakefilecompletionassist.cpp  cmakefilecompletionassist.hpp  cmakeindenter.cpp  cmakeindenter.hpp  cmakekitinformation.cpp  cmakekitinformation.hpp  cmakelocatorfilter.cpp  cmakelocatorfilter.hpp  cmakeparser.cpp  cmakeparser.hpp  cmakeprocess.cpp  cmakeprocess.hpp  cmakeproject.cpp  cmakeproject.hpp  cmakeprojectconstants.hpp  cmakeprojectimporter.cpp  cmakeprojectimporter.hpp  cmakeprojectmanager.cpp  cmakeprojectmanager.hpp  cmakeprojectmanager.qbs  (+26 more)
src/shared/: CMakeLists.txt  orca_gui_pch.h  orca_pch.h
src/tools/: CMakeLists.txt
(+1914 files in other folders)
