add_subdirectory(core)
add_subdirectory(texteditor)
add_subdirectory(projectexplorer)
add_subdirectory(cppeditor)
add_subdirectory(resourceeditor)
add_subdirectory(classview)
add_subdirectory(qtsupport)
add_subdirectory(qmakeprojectmanager)
add_subdirectory(languageclient)
add_subdirectory(cmakeprojectmanager)
add_subdirectory(lief)
add_subdirectory(analysis)
add_subdirectory(disassembly)
